Fixed scroll to top on mobile, fixed gallery

--- a/css/style.css
+++ b/css/style.css
@@ -513,7 +513,8 @@ footer p {
     text-align: center;
 }
 .portfolioFilter a.active {
-    text-decoration: line-through;
+    text-decoration: underline;
+    font-weight: bold;
     color: #FFF;
 }
 .portfolio-item {
